@@ -337,6 +337,8 @@ constants.gui_strings = {
   can_craft = { "gui.rb-can-craft" },
   can_mine = { "gui.rb-can-mine" },
   captions = { "gui.rb-captions" },
+  catalyst_abbrev = { "gui.rb-catalyst-abbrev" },
+  catalyst_amount = { "gui.rb-catalyst-amount" },
   category = { "gui.rb-category" },
   charging_energy = { "gui.rb-charging-energy" },
   click = { "gui.rb-click" },
