@@ -134,6 +134,8 @@ rb-can-burn=Can burn
 rb-can-craft=Can craft
 rb-can-mine=Can mine
 rb-captions=Captions
+rb-catalyst-abbrev=(C)
+rb-catalyst-amount=Catalyst amount
 rb-categories=Categories
 rb-categories-description=Uncheck a category to hide its objects from search and information pages.\n[font=default-semibold]NOTE:[/font] Some objects will be shown regardless of these settings (i.e. recipe ingredients and products).
 rb-category=Category
