@@ -4,6 +4,7 @@ Date: ????
   Features:
     - Added new page contents:
       - Number of module slots will be shown on all entities that support modules (https://todo.sr.ht/~raiguard/factorio-mods/57)
+      - [Recipe] Catalyst amounts are shown in ingredient and product tooltips (https://todo.sr.ht/~raiguard/factorio-mods/59)
 ---------------------------------------------------------------------------------------------------
 Version: 3.4.5
 Date: 2022-06-12
